[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/BG/town_00_2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sprites/ram_010000.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/ram_010001.png" type="Texture" id=4]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sprites/UI/dialogueBox.png" type="Texture" id=6]
[ext_resource path="res://Assets/Font/UbuntuMono-R.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Instances/NPC.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sprites/mailbox_fin.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/sign_fin.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 30 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]
_sections_unfolded = [ "Resource" ]

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 100, 80 )

[sub_resource type="DynamicFont" id=4]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node2D" index="0"]

[node name="BG" type="Sprite" parent="." index="0"]

z_index = -10
texture = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="Player" type="KinematicBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 0, 50 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="0"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -1000
limit_top = -10000000
limit_right = 1000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player" index="1"]

shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player" index="2"]

frames = SubResource( 2 )
animation = "default"

[node name="TalkingArea2D" type="Area2D" parent="Player" index="3"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/TalkingArea2D" index="0"]

shape = SubResource( 3 )

[node name="HUD" type="CanvasLayer" parent="." index="2"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 5 )

[node name="UI" type="MarginContainer" parent="HUD" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 1004.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Filler" type="MarginContainer" parent="HUD/UI/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 996.0
margin_bottom = 580.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
_sections_unfolded = [ "Size Flags" ]

[node name="DialogueBox" type="NinePatchRect" parent="HUD/UI/VBoxContainer" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 480.0
margin_right = 996.0
margin_bottom = 580.0
rect_min_size = Vector2( 0, 100 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
texture = ExtResource( 6 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin", "Rect", "Size Flags" ]

[node name="DialogueText" type="Label" parent="HUD/UI/VBoxContainer/DialogueBox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "hey guys
I sell you sheep for two dola"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Size Flags", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="NPC_mailbox2" parent="." index="3" instance=ExtResource( 8 )]

position = Vector2( 911.521, -5 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
dialogue_text = [ "Guliard's House", "This is my mail.", "Do not steal" ]
texture = ExtResource( 9 )

[node name="NPC2_sign" parent="." index="4" instance=ExtResource( 8 )]

position = Vector2( -847.153, -5 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
dialogue_text = [ "Welcome to Goatville", "<= To NASA", "=> To Farm" ]
texture = ExtResource( 10 )

[node name="NPC3_mailbox1" parent="." index="5" instance=ExtResource( 8 )]

position = Vector2( 218.309, -5 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
dialogue_text = [ "Rawson's House", "It's full of unread mail.." ]
texture = ExtResource( 9 )

[connection signal="talk" from="Player" to="HUD" method="_on_Player_talk"]

[connection signal="area_entered" from="Player/TalkingArea2D" to="HUD" method="_on_TalkingArea2D_area_entered"]

[connection signal="area_exited" from="Player/TalkingArea2D" to="HUD" method="_on_TalkingArea2D_area_exited"]

[connection signal="end_talk" from="HUD" to="Player" method="_on_HUD_end_talk"]

[connection signal="start_talk" from="HUD" to="Player" method="_on_HUD_start_talk"]


